<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:onClick="OnCancelButtonClick">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AddGroupButtonText"
        android:id="@+id/textView7" />

    <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ButtonAddGroupName"
        android:id="@+id/button6"
        android:layout_weight="1"
        android:onClick="OnAddGroupButtonClick" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ButtonDeleteGroupName"
        android:id="@+id/button7"
        android:layout_weight="1"
        android:onClick="OnDeleteGroupButtonClick" />
</LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ButtonRenameGroupName"
        android:id="@+id/button8"
        android:layout_weight="1"
        android:onClick="OnRenameGroupButtonClick" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CancelButtonName"
        android:id="@+id/button10"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:onClick="OnCancelMngButtonClick" />
    </LinearLayout>

</LinearLayout>