<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/GroupSpinner" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ButtonAddGroupName"
        android:id="@+id/buttonAddGroup"
        android:layout_weight="1"
        android:onClick="OnAddGroupButtonClick" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ButtonRenameGroupName"
        android:id="@+id/button19"
        android:layout_weight="1"
        android:onClick="OnRenameGroupButtonClick"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ButtonDeleteGroupName"
        android:id="@+id/button20"
        android:layout_weight="1"
        android:onClick="OnDeleteGroupButtonClick"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BackButton"
        android:id="@+id/button21"
        android:layout_weight="1"
        android:onClick="OnCancelMngButtonClick"/>
</LinearLayout>
</LinearLayout>