<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SearchButtonText"
        android:onClick="OnSearchButtonClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MenuNullSearch"
        android:id="@+id/button3"
        android:onClick="OnNullButtonClick"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/GroupSpinner"
        android:layout_weight="1"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CheckBoxUnreadText"
            android:id="@+id/checkBoxRead"
            android:onClick="OnCheckBoxClick"
            android:checked="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CheckBoxReadText"
            android:id="@+id/checkBoxUnread"
            android:onClick="OnCheckBoxClick"
            android:checked="true" />
    </LinearLayout>
</LinearLayout>