<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SerchTextViev"
        android:id="@+id/textView4" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/OptionSpinner"
        android:entries="@array/SearchItemsArray"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/SearchText" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SearchButton2Text"
        android:id="@+id/button5"
        android:layout_gravity="right"
        android:onClick="OnSearchButtonClick"
        android:layout_weight="1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BackButton"
        android:id="@+id/button9"
        android:onClick="OnCancelSearchButtonClick"
        android:layout_weight="1"/>
</LinearLayout>
</LinearLayout>