<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<TableRow>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextViewName"
        android:id="@+id/textView"
        android:layout_gravity="right" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TextName"
        android:layout_weight="1"
        android:inputType="textPersonName"/>
</TableRow>
    <TableRow>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextViewAutor"
        android:id="@+id/textView2"
        android:layout_gravity="right" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TextAutor"
        android:layout_weight="1"
        android:inputType="textPersonName"/>
    </TableRow>
    <TableRow>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextViewGenre"
        android:id="@+id/textView3"
        android:layout_gravity="right" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TextGenre"
        android:layout_weight="1"
        android:inputType="textPersonName"/>
    </TableRow>
</TableLayout>